--- a/auth/index.html
+++ b/auth/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,17 +7,29 @@
     <title>Sign In</title>
     <script type="module" src="/src/app.js"></script>
   </head>
-  <body>
-    <div class="pageContainer">
-      <a href="/">
-        <img src="/public/images/noroff-logo.png" alt="Noroff Logo" />
+  <body class="bg-gray-100 font-sans text-gray-800">
+    <div
+      class="flex flex-col items-center justify-center min-h-screen p-6 bg-white rounded-lg shadow-lg max-w-md mx-auto space-y-8"
+    >
+      <a href="/" class="flex justify-center">
+        <img
+          src="/public/images/noroff-logo.png"
+          alt="Noroff Logo"
+          class="w-32 h-auto"
+        />
       </a>
-  
-      <div class="loginContainer">
-        <a href="/auth/login/">Login</a>
-        <a href="/auth/register/">Register</a>
+
+      <div class="loginContainer flex space-x-4 font-semibold">
+        <a href="/auth/login/" class="hover:underline">Login</a>
+        <a href="/auth/register/" class="hover:underline">Register</a>
       </div>
-      <button id="logoutBtn">Logout</button>
+
+      <button
+        id="logoutBtn"
+        class="bg-red-500 text-white font-semibold px-4 py-2 rounded-lg hover:bg-red-600 transition duration-200"
+      >
+        Logout
+      </button>
     </div>
   </body>
 </html>
