--- a/auth/login/index.html
+++ b/auth/login/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,25 +8,58 @@
     <script type="module" src="/src/app.js"></script>
   </head>
 
-  <body>
-    <div class="pageContainer">
-      <a href="/">
-        <img src="/public/images/noroff-logo.png" alt="Noroff Logo" />
+  <body class="bg-gray-100 font-sans text-gray-800">
+    <div
+      class="flex flex-col items-center justify-center min-h-screen p-6 bg-white rounded-lg shadow-lg max-w-md mx-auto space-y-8"
+    >
+      <a href="/" class="flex justify-center mb-4">
+        <img
+          src="/public/images/noroff-logo.png"
+          alt="Noroff Logo"
+          class="w-32 h-auto"
+        />
       </a>
-      <h1>Login</h1>
-      <form name="login">
-        <div>
-          <label for="email">Email</label>
-          <input id="email" type="email" name="email" required />
+
+      <h1 class="text-3xl font-bold text-gray-900">Login</h1>
+
+      <form name="login" class="w-full space-y-6">
+        <div class="flex flex-col space-y-2">
+          <label for="email" class="text-sm font-semibold text-gray-700"
+            >Email</label
+          >
+          <input
+            id="email"
+            type="email"
+            name="email"
+            required
+            class="px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
+          />
         </div>
 
-        <div>
-          <label for="password">Password</label>
-          <input type="password" name="password" id="password" required />
+        <div class="flex flex-col space-y-2">
+          <label for="password" class="text-sm font-semibold text-gray-700"
+            >Password</label
+          >
+          <input
+            type="password"
+            name="password"
+            id="password"
+            required
+            class="px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
+          />
         </div>
 
-        <a href="/auth/register/">Register</a>
-        <button type="submit">Login</button>
+        <div class="flex justify-between items-center">
+          <a href="/auth/register/" class="text-blue-500 hover:underline"
+            >Register</a
+          >
+          <button
+            type="submit"
+            class="bg-blue-500 text-white font-semibold px-4 py-2 rounded-lg hover:bg-blue-600 transition duration-200"
+          >
+            Login
+          </button>
+        </div>
       </form>
     </div>
   </body>
