--- a/auth/register/index.html
+++ b/auth/register/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,57 +6,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register</title>
     <script type="module" src="../../src/app.js"></script>
-    <link rel="stylesheet" href="../../src/css/style.css">
+    <link rel="stylesheet" href="../../src/css/style.css" />
   </head>
 
-  <body>
-    <div class="pageContainer">
-    <a href="/">
-      <img src="/public/images/noroff-logo.png" alt="Noroff Logo" />
-    </a> 
-    <h1>Register</h1>
-
-    <form name="register">
-      <div>
-        <label for="name">Name</label>
-        <input
-          id="name"
-          type="text"
-          name="name"
-          required
-          maxlength="20"
-          pattern="^[\w]+$"
-          title="Please enter a username using only letters and numbers"
+  <body class="bg-gray-100 font-sans text-gray-800">
+    <div
+      class="pageContainer flex flex-col items-center justify-center min-h-screen p-6 bg-white rounded-lg shadow-lg max-w-md mx-auto space-y-8"
+    >
+      <a href="/" class="flex justify-center">
+        <img
+          src="/public/images/noroff-logo.png"
+          alt="Noroff Logo"
+          class="w-32 h-auto"
         />
-      </div>
+      </a>
 
-      <div>
-        <label for="email">Email</label>
-        <input
-          id="email"
-          type="email"
-          name="email"
-          required
-          pattern="^[\w\-.]+@(stud\.)?noroff\.no$"
-          title="Please enter a valid noroff.no or stud.noroff.no address"
-        />
-      </div>
+      <h1 class="text-3xl font-bold text-gray-900">Register</h1>
 
-      <div>
-        <label for="password">Password</label>
-        <input
-          type="password"
-          name="password"
-          id="password"
-          required
-          minlength="8"
-        />
-      </div>
+      <form name="register" class="w-full space-y-6">
+        <div class="flex flex-col space-y-2">
+          <label for="name" class="text-sm font-semibold text-gray-700"
+            >Name</label
+          >
+          <input
+            id="name"
+            type="text"
+            name="name"
+            required
+            maxlength="20"
+            pattern="^[\w]+$"
+            title="Please enter a username using only letters and numbers"
+            class="px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
+          />
+        </div>
 
-      <a href="/auth/login/">Login</a>
-      <button type="submit">Register</button>
-    </form>
+        <div class="flex flex-col space-y-2">
+          <label for="email" class="text-sm font-semibold text-gray-700"
+            >Email</label
+          >
+          <input
+            id="email"
+            type="email"
+            name="email"
+            required
+            pattern="^[\w\-.]+@(stud\.)?noroff\.no$"
+            title="Please enter a valid noroff.no or stud.noroff.no address"
+            class="px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
+          />
+        </div>
 
-  </div>
+        <div class="flex flex-col space-y-2">
+          <label for="password" class="text-sm font-semibold text-gray-700"
+            >Password</label
+          >
+          <input
+            type="password"
+            name="password"
+            id="password"
+            required
+            minlength="8"
+            class="px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
+          />
+        </div>
+
+        <div class="flex justify-between items-center">
+          <a href="/auth/login/" class="text-blue-500 hover:underline">Login</a>
+          <button
+            type="submit"
+            class="bg-blue-500 text-white font-semibold px-4 py-2 rounded-lg hover:bg-blue-600 transition duration-200"
+          >
+            Register
+          </button>
+        </div>
+      </form>
+    </div>
   </body>
 </html>
